Regression: Unable to add curve hair on the left side of the model. #99936

Closed
opened 2022-07-24 00:08:06 +02:00 by Damien Monteillard · 9 comments

System Information
Operating system: Linux-5.15.14-1-lts-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.46

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-22 21:12, hash: 82467e5dcf
Caused by 1f94b56d77

Short description of error
Cannot paint with mirror X.
If I uncheck X mirror I can't add curve hair on the left side of the model.

Exact steps for others to reproduce the error

  • Selected the Curves Object
  • Switch to Sculpt mode in the 3d viewport.

Select the add button of the tool. And paint with X mirror checked.

lapin_belier_330_bug-00.blend

**System Information** Operating system: Linux-5.15.14-1-lts-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.46 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-22 21:12, hash: `82467e5dcf` Caused by 1f94b56d77 **Short description of error** Cannot paint with mirror X. If I uncheck X mirror I can't add curve hair on the left side of the model. **Exact steps for others to reproduce the error** - Selected the Curves Object - Switch to Sculpt mode in the 3d viewport. # Select the add button of the tool. And paint with X mirror checked. [lapin_belier_330_bug-00.blend](https://archive.blender.org/developer/F13311147/lapin_belier_330_bug-00.blend)

Added subscriber: @lastrodamo

Added subscriber: @lastrodamo
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm. Checking...

Thanks for the report. I can confirm. Checking...
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

First bad commit is: 1f94b56d77
cc @JacquesLucke

First bad commit is: 1f94b56d77 cc @JacquesLucke
Pratik Borhade changed title from Add Curve Hair with X Mirror to Regression: Unable to add curve hair on the left side of the model. 2022-07-24 08:31:20 +02:00

This issue was referenced by 1c05f30e4d

This issue was referenced by 1c05f30e4dcbf05a7dc1a700cd76dc8c3d70601d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-07-25 11:44:13 +02:00
Member

This didn't work, because the Add and Density brush now require a uv map on the surface that can be used to store attachment information. In your case you can recreate the uv map so that there are no overlapping islands. Or you can create a separate uv map just for the surface attachment.

I added a warning, so that this doesn't fail silently anymore.

This didn't work, because the Add and Density brush now require a uv map on the surface that can be used to store attachment information. In your case you can recreate the uv map so that there are no overlapping islands. Or you can create a separate uv map just for the surface attachment. I added a warning, so that this doesn't fail silently anymore.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99936
No description provided.